--- a/src/components/Checkout/CheckoutProduct.css
+++ b/src/components/Checkout/CheckoutProduct.css
@@ -10,9 +10,9 @@
 
 .checkoutProduct__button {
     background: #f0c14b;
-    border: 1px solid;
+    border: none;
+    border-radius: 10px;
     margin-top: 10px;
-    border-color: #a88734 #9c7e31 #846a29;
     color: #111;
     width: 250px;
 }
