--- a/src/components/Checkout/Subtotal.css
+++ b/src/components/Checkout/Subtotal.css
@@ -24,9 +24,9 @@
     border-radius: 2px;
     width: 100%;
     height: 30px;
-    border: 1px solid;
+    border: none;
+    border-radius: 10px;
     margin-top: 10px;
-    border-color: #a88734 #9c7e31 #846a29;
     color: #111;
     cursor: pointer;
   }
