--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,63 +1,106 @@
-.header{
-    background-color: #131921;
-    display: flex;
-    align-items: center;
-    position: sticky;
-    top: 0;
-    z-index: 100;
-}
-.headerLogo{
-    width: 100px;
-    object-fit: contain;
-   margin-top: 10px;
-   margin-left: 10px;
-   margin-bottom: 10px;
-   margin-right: 10px;
-    
-}
-.headNavBar{
- display: flex;
- justify-content: space-evenly;
-}
-.headerLink{
-color: white;
-text-decoration: none;
-}
-.headerOption{
-    display: flex;
-    flex-direction: column;
-    margin-left: 10px;
-    margin-right: 10px;
-}
-.headerOption1{
-    font-size: 10px;
-}
-.headerOption2{
-    font-size: 13px;
-    font-weight: 800;
-}
-.headerBasket{
-    display: flex;
-    align-items: center;
-}
-.headerBasketCount{
-    margin-left: 10px;
-    margin-right: 10px;
-}
-.searchBar{
-    display: flex;
-    flex:1;
-}
-.searchInput{
-    height: 12px;
-    padding: 10px;
-    border: none;
+
+.navbar__component {
     width: 100%;
+    height: 60px;
+    background-color: #131A22;
+    display: flex;
+   
 }
-.searchIcon{
-    padding: 5px;
-    background-color: #cd9842;
-    height: 22px !important;
+.navbar__logo {
+   background: url('https://ik.imagekit.io/amazon1234/sprite_350x_q7QZkJCVl.png?updatedAt=1627121934264') no-repeat -9px -50px;
+	width: 98px;
+	height: 31px;
+    margin: 18px;
+}
+.navbar__locator {
+    display:flex;
+    margin: 20px 0px;
+}
+.navbar__location {
+    color: white;
+    font-weight: bold;
+    margin-left: 5px;
+}
+.navbar__locatorImage {
+    background: url('https://ik.imagekit.io/amazon1234/sprite_350x_q7QZkJCVl.png?updatedAt=1627121934264') no-repeat -70px -378px;
+	width: 16px;
+	height: 18px;
+}
+.navbar__searchcomponent {
+    display:flex;
+    margin-left: 30px;
+}
+.navbar__seaarchboxdiv {
+    background-color: #FEBE68;
+    height: 44px;
+    width: 48px;
+    border-radius: 0px 5px 5px 0px;
+    margin-top: 8px;
+}
+.navbar__searchbox{
+    width: 650px;
+    height: 38px;
+    margin-top: 8px;
+}
+.navbar__searchicon {
+    background: url('https://ik.imagekit.io/amazon1234/sprite_350x_q7QZkJCVl.png?updatedAt=1627121934264') no-repeat -9px -289px;
+	width: 23px;
+	height: 23px;
+    margin: 12px;
+}
+.nav__dropdown {
+    width: 60px;
+    height: 44px;
+    margin-top: 8px;
+    background-color: #e6e5e5;
+    border-radius: 5px 0px 0px 5px;
+    text-align-last: center;
+}
+.navbar__signin{
+    width: 145px;
+    margin-top: 13px;
+    margin-left: 30px;
+}
+.navbar__returns {
+    width: 85px;
+    margin-top:13px;
+    margin: left 10px;
+}
+.navbar__cart {
+    display:flex;
+    margin-top: 15px;
+}
+.navbar_text {
+    color: white;
+}
+.cart__image {
+    background: url('https://ik.imagekit.io/amazon1234/sprite_350x_q7QZkJCVl.png?updatedAt=1627121934264') no-repeat -217px -336px;
+    width: 43px;
+	height: 30px;
+}
+.navbar_text_cart {
+    margin-top: 13px;
+    font-weight: bold;
+    position: relative;
+    left: -10px;
+}
+.cart__item {
+    font-weight: bold;
+    position: relative;
+    left: -23px;
+    top: -3px;
+    color: #F08805;
 }
 
-/* the end  */
+.navbar__footer {
+    width: 100%;
+    height: 30px;
+    background-color: #22303E;
+    color: white;
+    display: flex;
+}
+.navbar__footer_text {
+    margin: 5px 10px;
+    font-size: 14px;
+    font-weight: bold;
+}
