--- a/src/components/Home/Product/Product.css
+++ b/src/components/Home/Product/Product.css
@@ -8,6 +8,7 @@
     padding: 20px;
     background-color: white;
     z-index: 1;
+    
 }  
 .product__rating {
     display: flex;
@@ -20,9 +21,9 @@
 }  
 .product__button {
     background: #f0c14b;
-    border: 1px solid;
+    border: none;
+    border-radius: 10px;
     margin-top: 10px;
-    border-color: #a88734 #9c7e31 #846a29;
     color: #111;
     cursor: pointer;
     width: 40%;
