--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -42,12 +42,11 @@
 }
 .login__signInButton {
     background: #f0c14b;
-    border-radius: 2px;
+    border-radius: 10px;
     width: 100%;
     height: 30px;
-    border: 1px solid;
     margin-top: 10px;
-    border-color: #a88734 #9c7e31 #846a29;
+    border: none;
     cursor: pointer;
 }
 .login__registerButton {
@@ -57,5 +56,7 @@
     border: 1px solid;
     margin-top: 10px;
     border-color: darkgray;
+    border: none;
+    border-radius: 10px;
     cursor: pointer;
 } 
