--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -91,14 +91,11 @@ footer p{
 }
 
 
-@media (max-width:700px){
-    .footer_container .forres{
-        display: none;
-    }
-   
-}
-@media (max-width:500px){
-    .footer_container .forres{
-        display: none;
+@media screen and (max-width: 600px) {
+    .footer_container {
+        padding: 0px 30px;
+        font-size: 10px;
+        gap: 5px;
+        
     }
 }
